--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.3.1",
+    "csv-writer": "^1.6.0",
+    "fast-csv": "^4.3.6",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "ng-apexcharts": "1.7.1",
+    "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
@@ -40,6 +43,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
